// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-cost-optimization - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Identify Azure cost savings from usage and spending data. USE FOR: optimize Azure costs, reduce Azure spending/expenses, analyze Azure costs, find cost savings, generate cost optimization report, identify orphaned resources to delete, rightsize VMs, reduce waste, optimize Redis costs, optimize storage costs. DO NOT USE FOR: deploying resources (use azure-deploy), general Azure diagnostics (use azure-diagnostics), security issues (use azure-security)",
  "extractedKeywords": [
    "analyze",
    "app service",
    "azure",
    "azure-deploy",
    "azure-diagnostics",
    "azure-security",
    "cli",
    "container",
    "cosmos",
    "cost",
    "costs",
    "data",
    "delete",
    "deploying",
    "diagnostics",
    "expenses",
    "find",
    "from",
    "function",
    "general",
    "generate",
    "identify",
    "issues",
    "key vault",
    "mcp",
    "monitor",
    "optimization",
    "optimize",
    "orphaned",
    "redis",
    "reduce",
    "report",
    "resources",
    "rightsize",
    "savings",
    "security",
    "spending",
    "sql",
    "storage",
    "usage",
    "validation",
    "waste",
  ],
  "name": "azure-cost-optimization",
}
`;

exports[`azure-cost-optimization - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "analyze",
  "app service",
  "azure",
  "azure-deploy",
  "azure-diagnostics",
  "azure-security",
  "cli",
  "container",
  "cosmos",
  "cost",
  "costs",
  "data",
  "delete",
  "deploying",
  "diagnostics",
  "expenses",
  "find",
  "from",
  "function",
  "general",
  "generate",
  "identify",
  "issues",
  "key vault",
  "mcp",
  "monitor",
  "optimization",
  "optimize",
  "orphaned",
  "redis",
  "reduce",
  "report",
  "resources",
  "rightsize",
  "savings",
  "security",
  "spending",
  "sql",
  "storage",
  "usage",
  "validation",
  "waste",
]
`;
